--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,4 +124,7 @@ dependencies {
 
     implementation("io.ktor:ktor-client-content-negotiation:$ktor_version")
     implementation("io.ktor:ktor-serialization-kotlinx-json:$ktor_version")
+
+    implementation 'io.github.a914-gowtham:compose-ratingbar:1.2.3'
+
 }
