--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
 
         <activity android:name=".AddPostActivity"/>
         <activity android:name=".EditPostActivity"/>
+        <activity android:name=".MyWriteActivity"/>
 
     </application>
 
